Kubernetes/ingress/templates/k8s-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-book-ingress
  namespace: app-book
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: johnk8sapp.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-book
            port:
              number: 80
